@@ -46,8 +46,8 @@ import org.jose4j.jwt.consumer.JwtConsumer;
 import org.jose4j.jwt.consumer.JwtConsumerBuilder;
 
 import java.io.File;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.security.Key;
 import java.util.Arrays;
 import java.util.Base64;
@@ -375,10 +375,13 @@ public class DownloadController {
         String channel = request.params(":channel");
         String path = "";
         try {
-            URL url = new URL(request.url());
-            path = url.getPath();
+            URI uri = new URI(request.url());
+            // URL decode the path to support ^ in package versions
+            path = uri.getPath();
+
         }
-        catch (MalformedURLException e) {
+        catch (URISyntaxException e) {
+            log.error(String.format("Unable to parse: %s", request.url()));
             halt(HttpStatus.SC_INTERNAL_SERVER_ERROR,
                     String.format("url '%s' is malformed", request.url()));
         }
@@ -395,6 +398,7 @@ public class DownloadController {
                 pkgInfo.getVersion(), pkgInfo.getRelease(), pkgInfo.getEpoch(), pkgInfo.getArch(),
                 pkgInfo.getChecksum());
         if (pkg == null) {
+            log.error(String.format("%s: Package not found in channel: %s", path, channel));
             halt(HttpStatus.SC_NOT_FOUND,
                  String.format("%s not found in %s", basename, channel));
         }
@@ -557,6 +561,10 @@ public class DownloadController {
      * @param file description of the file to send
      */
     private static Object downloadFile(Request request, Response response, File file) {
+        if (!file.exists()) {
+            log.info("404 - File not found: " + file.getAbsolutePath());
+            halt(HttpStatus.SC_NOT_FOUND, "File not found: " + request.url());
+        }
         response.header("Content-Type", "application/octet-stream");
         response.header("Content-Disposition", "attachment; filename=" + file.getName());
         response.header("X-Sendfile", file.getAbsolutePath());
